fix: Update output reading method in MissingKeysIntegrationTest for better compatibility and clarity fix: Refactor duplicate key counting in WriteMissingKeysToLocaleFileTest for Java 8 compatibility